<resources>
    <color name="Red">#FF0000</color>
    <color name="Gray">#999</color>
    <color name="Maroon">#800000</color>
    <color name="LightBlue">#008080</color>
    <color name="DarkBlue">#09578e</color>

    <string name="app_name">Feedback-Renewal</string>
    <string name="action_settings">Settings</string>
    <string name="OfficerCode">Officer Code</string>
    <string name="Renewal">Renewal</string>
    <string name="Feedback">Feedback</string>
    <string name="AddPhone">ADD PHONE</string>
    <string name="Ok">Ok</string>
    <string name="EditPhone">Edit Phone</string>
    <string name="fileUploadSuccess">file Uploaded Successfully</string>
    <string name="ExamplePhoneNumber">Example: 0654237656</string>
    <string name="ReadOnly">SD Card is set to readonly mode. Please set the mode to read/write and restart the application.</string>
    <string name="NoSDCard">IMIS needs external memory card to run. Please insert memory card and restart the application.</string>
    <string name="ForceClose">Force Close</string>
    <string name="OfflineMode">Offline Mode</string>
    <string name="NotificationAlertText">New update available.</string>
    <string name="ContentTitle">New release of Feedback-Renewal is now available.</string>
    <string name="ContentText">Click here to download.</string>
    <string name="Upload">Upload</string>
    <string name="title_activity_renewals">Renewals</string>

    <string name="title_activity_feedbacks">Feedbacks</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_renewal">Renewal</string>

    <string name="Officer">Officer Code</string>
    <string name="ClaimId">Claim Code</string>
    <string name="CHFID">CHFID</string>
    <string name="Scan">Scan</string>
    <string name="Question1">Have you been treated at the facility on the said date?</string>
    <string name="No">No</string>
    <string name="Question2">Have you been asked for a payment to the facility or staff?</string>
    <string name="Question3">Have drugs been prescribed to you?</string>
    <string name="Question4">Did you get drugs from the facility?</string>
    <string name="Assessment">How satisfied are you with the care you received at the health facility? Rate on a scale 1&#8211;5 (1= not satisfied; 5= very satisfied)</string>
    <string name="Yes">Yes</string>
    <string name="Submit">Submit</string>
    <string name="English">English</string>
    <string name="Swahili">Swahili</string>
    <string name="UploadedSuccessfully">Data uploaded on the server successfully.</string>
    <string name="SavedOnSDCard">File is saved on external storage.</string>
    <string name="MissingOfficer">Please enter Enrolment Assistant Code</string>
    <string name="MissingClaimID">Please enter Claim ID</string>
    <string name="MissingCHFID">Please enter CHFID</string>
    <string name="MissingAnswers">All the questions must be answered.</string>
    <string name="SDCardReadOnly">SD Card is set to readonly mode. Please set the mode to read/write and restart the application.</string>
    <string name="SDCardMissing">Application needs external memory card to run. Please insert memory card and restart the application.</string>
    <string name="UploadingFeedback">Uploading feedback&#8230;</string>
    <string name="UploadAllFeedback">Upload all feedback</string>
    <string name="CheckInternet">Please check your internet connection to upload feedback.</string>
    <string name="Uploading">uploading&#8230;</string>
    <string name="of">of</string>
    <string name="NoFeedback">No feedback found to upload.</string>
    <string name="FTPConnectionFailed">Unable to connect the server. Operation aborted.</string>
    <string name="ServerRejected">Data is rejected by the server. Data is moved to the rejected folder of the phone.</string>
    <string name="BulkUpload">Data has been uploaded successfully. Please check your Rejected/Accepted folders to verify the server response.</string>
    <string name="MissingOfficerCode">Please enter officer code</string>
    <string name="ReceiptNo">ReceiptNo</string>
    <string name="ProductCode">Product Code</string>
    <string name="Amount">Amount</string>
    <string name="NoFeedbackFound">No feedback found</string>
    <string name="NoRenewalFound">No renewal found</string>
    <string name="InvalidPhone">This phone does not belong to the officer</string>
    <string name="ErrorOccurred">Error occurred while fetching data</string>
    <string name="InvalidCHFID">Invalid CHFID</string>
    <string name="MissingReceiptNo">Please enter Receipt No.</string>
    <string name="MissingProductCode">Please enter product code</string>
    <string name="MissingAmount">Please enter amount</string>
    <string name="InvalidReceiptNo">This receipt number is already used.</string>
    <string name="DiscontinuePolicy">Discontinue this policy</string>
    <string name="DiscontinuePolicyQ">Do you want to discontinue this policy?</string>
    <string name="Of">of</string>
    <string name="NoFiles">No file found.</string>
    <string name="NoInternet">Please check your internet connection.</string>
    <string name="Statistics">Statistics</string>
    <string name="GetStats">Request Statistics</string>
    <string name="NoStatFound">No data found</string>
    <string name="InProgress">In Progress...</string>
    <string name="InternetRequired">Internet connection is required to view the statistics.</string>
    <string name="StartDate">Start Date</string>
    <string name="EndDate">End Date</string>
    <string name="MissingStartDate">Please enter Start Date</string>
    <string name="MissingEndDate">Please enter End Date</string>
    <string name="Payer">Payer</string>
    <string name="PhoneMissing">Phone Missing</string>
    <string name="ApplicationVersionIs">Application version :</string>
    <string name="MissingPayer">Missing Payer</string>
    <string name="ConnectionFail">Could not connect to the server.</string>

</resources>
