<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:nestedScrollingEnabled="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.exact.imis.feedback_renewal.Renewal">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Submit" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp">

            <EditText
                android:id="@+id/etofficer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:editable="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/Officer"
                android:longClickable="false"
                android:singleLine="true">

            </EditText>

            <!-- <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"> -->

            <EditText
                android:id="@+id/etCHFID"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:editable="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/CHFID"
                android:inputType="number"
                android:longClickable="false"
                android:maxLength="9"
                android:singleLine="true">


            </EditText>

            <!-- <ImageButton
                android:id="@+id/btnScan"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:contentDescription="@string/Scan"
                android:src="@drawable/scan" />

        </LinearLayout> -->

            <EditText
                android:id="@+id/etProductCode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:editable="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/ProductCode"
                android:longClickable="false"
                android:singleLine="true">

            </EditText>

            <AutoCompleteTextView
                android:id="@+id/etOfficer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Payer"
                android:visibility="gone"
                >

                <requestFocus />

            </AutoCompleteTextView>

            <EditText
                android:id="@+id/etReceiptNo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ReceiptNo"
                android:inputType="number"
                android:singleLine="true">

                <requestFocus />

            </EditText>

            <EditText
                android:id="@+id/etAmount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Amount"
                android:inputType="number"
                android:singleLine="true">

            </EditText>


            <Spinner
                android:id="@+id/spPayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <CheckBox
                android:id="@+id/chkDiscontinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:text="@string/DiscontinuePolicy"
                android:textColor="@color/Red" />


        </LinearLayout>


    </ScrollView>


</RelativeLayout>
