<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/RL"
    android:clickable="true"
    android:longClickable="true">

    <Button
        android:id="@+id/btnRenewal"
        android:text="@string/Renewal"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/etOfficerCode"
        android:layout_marginTop="20dp"

 />

    <Button
        android:id="@+id/btnFeedback"
        android:text="@string/Feedback"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:layout_below="@+id/btnRenewal"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
/>
    <ImageButton
        android:id="@+id/btnAddPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:src="@drawable/call"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvPhoneNumber"
        android:textSize="24sp"
        android:textColor="@color/DarkBlue"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/btnAddPhone" />


    <EditText
        android:id="@+id/etOfficerCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/OfficerCode"
        android:maxLength="8"
        android:maxLines="1">

        <requestFocus />
    </EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Upload"
        android:id="@+id/btnUpload"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/etOfficerCode"
        android:layout_alignEnd="@+id/etOfficerCode" />

</RelativeLayout>
